[build-system]
# Minimum requirements for the build system to execute.
requires = ["setuptools", "wheel"]

[project]
name = "rioxarray"
version = "0.15.6"
description = "geospatial xarray extension powered by rasterio"
maintainers = [
    {name = "rioxarray Contributors"},
]
keywords = [
    "rioxarray",
    "xarray",
    "rasterio",
]
readme = "README.rst"
license = {text = "Apache"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: GIS",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
requires-python = ">=3.10"
dependencies = [
    "packaging",
    "rasterio>=1.3",
    "xarray>=2022.3.0",
    "pyproj>=3.3",
    "numpy>=1.23",
]

[project.urls]
homepage = "https://corteva.github.io/rioxarray/"
documentation = "https://corteva.github.io/rioxarray/"
repository = "https://github.com/corteva/rioxarray"
changelog = "https://corteva.github.io/rioxarray/stable/history.html"

[tool.setuptools.packages.find]
include = ["rioxarray", "rioxarray.*"]

[options.package_data]
rioxarray = [
  "py.typed",
]

[project.entry-points."xarray.backends"]
rasterio = "rioxarray.xarray_plugin:RasterioBackend"

[project.optional-dependencies]
interp = [
    "scipy"
]
all = [
    "scipy"
]

[tool.black]
target_version = ["py310"]
