[metadata]
author = rioxarray Contributors
name = rioxarray
version = 0.13.5.dev0
description = geospatial xarray extension powered by rasterio
keywords = rioxarray, xarray, rasterio
long_description = file: README.rst
long_description_content_type = text/x-rst
license = Apache
license_files = LICENSE
platform = any
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Natural Language :: English
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Topic :: Scientific/Engineering :: GIS
    Programming Language :: Python
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3
    Topic :: Software Development :: Libraries :: Python Modules
    Typing :: Typed
url = https://github.com/corteva/rioxarray
download_url = http://python.org/pypi/rioxarray

[options]
packages = find:
zip_safe = False # https://mypy.readthedocs.io/en/stable/installed_packages.html
include_package_data = True
python_requires = >=3.9
install_requires =
    packaging
    rasterio>=1.1.1
    xarray>=0.17
    pyproj>=2.2
    numpy>=1.21

[options.package_data]
rioxarray =
    py.typed

[options.packages.find]
include = rioxarray*

[options.entry_points]
xarray.backends =
    rasterio = rioxarray.xarray_plugin:RasterioBackend

[options.extras_require]
interp =
    scipy
doc =
    sphinx-click
    nbsphinx
    sphinx_rtd_theme
test =
    pytest>=3.6
    pytest-cov
    pytest-timeout
    dask
    netcdf4
dev =
    %(interp)s
    %(doc)s
    %(test)s
    pylint
    mypy
    pre-commit
all =
    %(interp)s
    %(doc)s
    %(test)s
    %(dev)s
